<resources>
    <string name="app_name">NetShare</string>
    <!-- general -->
    <string name="error_network">Loading failed, please check your network.</string>

    <!-- main -->
    <string name="main_login_info">Please login first</string>
    <string name="main_info">Welcome! </string>
    <string name="no_image_error_label">No images :-(</string>
    <!-- login -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_email_hint">Enter email here</string>
    <string name="login_password_hint">Your password</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>
    <string name="login_forget">Forget password?</string>
    <string name="login_toast1">A username already exists</string>
    <string name="login_fail_toast">Email, password is wrong or the account is already logged in</string>

    <string name="login_otherType">Have other accounts ? Click here !</string>
    <string name="login_otherCancel">SIGN IN CANCELLED</string>
    <!-- login reset -->
    <string name="login_reset_title">Reset password</string>
    <string name="login_reset_body">Enter email here to reset</string>
    <string name="login_reset_ok">Email has been sent !</string>
    <string name="login_reset_error">Cannot find this email !</string>
    <string name="login_nullError">Please provide email and password !</string>

    <!-- register -->
    <string name="register_title">Register</string>
    <string name="register_email">Your email</string>
    <string name="register_email_hint">Enter your email here</string>
    <string name="register_password">Password</string>
    <string name="register_password_r">Repeat password</string>
    <string name="register_ok">Register</string>
    <string name="register_change_login">Already have account? Login here</string>
    <string name="register_error">Invalid email address or Password does not match !</string>
    <string name="register_info">Register success !</string>
    <string name="register_password_hint">At least 6 characters</string>
    <string name="register_username_hint">Username (Optional)</string>
    <string name="register_email_occupied">The email address is already in use by another account.</string>

    <!-- home -->
    <string name="home_title">Home</string>

    <!-- both home and login -->
    <string name="exit_toast">Press again to exit the program</string>

    <!-- filter -->
    <string name="filter_text">Filter</string>
    <string name="filter_1">Old to new</string>
    <string name="filter_2">New to old</string>

    <!-- User -->
    <string name="user_title">Settings</string>
    <string name="user_item1">Account</string>
    <string name="user_item2">About</string>
    <string name="user_item3">General</string>
    <string name="user_item4">Logout</string>
    <string name="user_item5">Exit</string>

    <!-- account -->
    <string name="account_update_username">Username :</string>
    <string name="account_update_password_text">Password :</string>
    <string name="account_update_password">Change password</string>
    <string name="account_change">Change</string>
    <string name="account_setUsername">Username updated !</string>
    <string name="account_resetPassword">An email has been sent to your email, please check it and finish reset password.</string>

    <!-- about -->
    <string name="about_author" translatable="false">Author email :</string>
    <string name="about_git" translatable="false">Github link :</string>
    <string name="about_copyLink">Link copied to clipboard.</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Appearance</string>
    <string name="sync_header">Sync</string>
    <string name="cache">Clean cache</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Theme</string>

    <!-- Second Preferences -->
    <string name="app_settings">App settings</string>
    <string name="image_setting">Load original images for user icon ?</string>
    <string name="image_setOn">The image will be more explicit but need more time to load.</string>
    <string name="image_setOff">The image will not be as explicit as the original but will save loading time. </string>
    <string name="language_set">Display language</string>

    <!-- themes titles -->
    <string name="settings_theme_title1">Follow system</string>
    <string name="settings_theme_title2">Light</string>
    <string name="settings_theme_title3">Dark</string>

    <!-- upload -->
    <string name="upload_imageName">Name (Default is filename)</string>
    <string name="upload_imageCat">Category</string>
    <string name="upload_imageSize">Size</string>
    <string name="upload_local_title">Choose local file</string>
    <string name="upload_camera_title">Take images from camera</string>
    <string name="upload_upload_title">Upload</string>
    <string name="upload_permission">You have authorized</string>
    <string name="upload_permission_ok">Get permission</string>
    <string name="upload_permission_no">Cannot get permission</string>
    <string name="upload_failed">Upload failed, please check your settings</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_file_error">Image too large !</string>
    <string name="upload_size_error">The file is too large, the preview image will be compressed</string>
    <string name="upload_waiting_dialog_title">Uploading</string>
    <string name="upload_waiting_dialog_message">Please wait</string>

    <!-- home -->
    <string name="tab_1">Anime</string>
    <string name="tab_2">Meme</string>
    <string name="tab_3">Game</string>

    <!-- image zoom -->
    <string name="zoom_image_name">Name :</string>
    <string name="zoom_image_cat">Category :</string>
    <string name="zoom_save_ok">Saved !</string>
    <string name="zoom_share_ok">Link copied to the clipboard !</string>
    <string name="zoom_delete">Delete image</string>
    <string name="zoom_delete_ok">Image delete !</string>

    <string name="zoom_dialog_title">Delete</string>
    <string name="zoom_dialog_message">This operation is irreversible. Are you sure you want to delete this image?</string>

    <!-- pop menu -->
    <string name="pop_save">Save image</string>
    <string name="pop_share">Share</string>

    <!-- cache -->
    <string name="cache_title">Cache size is </string>
    <string name="cache_message">This is will take more time when loading images, are you sure?</string>
    <string name="cache_cancel">Not now</string>
    <string name="cache_OK">Cache cleaned.</string>

    <!-- mine -->
    <string name="my_title">My uploads</string>
    <string name="see_all_label">See All</string>
    <string name="mine_welcome">Welcome back !</string>
    <string name="mine_tab_1">#Anime</string>
    <string name="mine_tab_2">#Meme</string>
    <string name="mine_tab_3">#Game</string>
</resources>