<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.userlist.UserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="83dp"
                android:layout_height="75dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/user_large_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:text="TextView"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/user_email"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.551" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_header_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/user_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/user_item1"
                    android:drawableLeft="@drawable/account_icon"
                    android:drawableRight="@drawable/next_icon" />

                <Button
                    android:id="@+id/user_about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/user_item2"
                    android:drawableLeft="@drawable/about_icon"
                    android:drawableRight="@drawable/next_icon" />

                <Button
                    android:id="@+id/user_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/user_item3"
                    android:drawableLeft="@drawable/settings_icon"
                    android:drawableRight="@drawable/next_icon" />

                <Button
                    android:id="@+id/user_logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/user_item4"
                    android:drawableLeft="@drawable/logout_icon"
                    android:drawableRight="@drawable/next_icon" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>