<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.myupload.MyUploadHomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:background="@color/WhiteSmoke"
                android:layout_height="50dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/WhiteSmoke">

                <ImageView
                    android:id="@+id/mine_userIcon"
                    android:layout_width="245dp"
                    android:layout_height="226dp"
                    android:src="@drawable/account_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mine_welcome"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.308"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mine_userIcon" />

                <TextView
                    android:id="@+id/mine_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.076"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/mine_userIcon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/WhiteSmoke"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:id="@+id/mine_anime_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/loading_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30dp"
                    android:padding="12dip"
                    android:textColor="@color/deepSkyBlue3"
                    android:text="@string/mine_tab_1" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/WhiteSmoke"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:id="@+id/mine_meme_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/loading_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30dp"
                    android:padding="12dip"
                    android:textColor="@color/deepSkyBlue3"
                    android:text="@string/mine_tab_2" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/WhiteSmoke"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:id="@+id/mine_game_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/loading_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="30dp"
                    android:padding="12dip"
                    android:textColor="@color/deepSkyBlue3"
                    android:text="@string/mine_tab_3" />
            </FrameLayout>
        </LinearLayout>
</FrameLayout>